--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -11,11 +11,14 @@ body{
 }
 .container{
     display: flex;    
+    
     justify-content: center;
 }
 header{
     position:fixed;
-    width: 40%;
+    width: 90%;
+    max-width: 510px;
+    
     height: 60px;
     margin: 10px;
     background-color: rgba(128, 132, 137,0.5);    
@@ -36,13 +39,13 @@ nav{
     background-color: rgb(74, 76, 79);
     border-radius: 7px;
 }
-a{
+nav a{
     color:rgb(242, 242, 242);
     text-decoration: none;
     
     transition: 0.2s ease-in-out;
 }
-a:hover{
+nav a:hover{
     color:rgb(255, 204, 0);
     transition: 0.3s ease-in;
 }
@@ -51,7 +54,8 @@ a:hover{
 }
 main{
     margin-top:140px;
-    width: 100%;
+    width: 90%;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -60,6 +64,7 @@ main{
 
 .about{    
     display: flex;
+    max-width:510px;
     gap:20px;    
 }
 .about-text{
@@ -73,17 +78,7 @@ main{
     color:rgba(128, 132, 137,0.5);
     font-size:20px;
 }
-.links{
-    display: flex;
-    margin-top: 10px;
-    gap:20px;
-}
-.links a{
-    color: rgb(74, 76, 79);
-    text-decoration: none;
-    font-size:30px;
-    transition: 0.2s ease-in-out;
-}
+
 
 .about img{
     margin-top: 0px;
@@ -93,13 +88,69 @@ main{
     height:120px;
 }
 .texto{
-    width:40%;
+    color: rgb(74, 76, 79);
+    max-width: 510px;
     display: flex;
-    align-items: center;
+    flex-direction:column;
+    
 }
+
+.links{
+    color: rgb(74, 76, 79);
+    font-size:25px;
+    text-decoration: none;
+}
+.links i{
+    font-size:20px;
+    margin-right: 10px;
+}
+
 .texto p{
     font-size: 17px;
     text-align: justify;
-    text-indent: 20px;
+    text-indent: 15px;
     line-height: 30px;
+}
+.projects{
+    margin-top: 20px;
+    max-width: 510px;
+    display: flex;
+    flex-direction: column;
+}
+.cont-projects{
+    margin-top: 10px;
+    max-width: 510px;
+    display:flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap:20px;
+
+}
+.cont-projects a{
+    width: 240px;
+    
+    color: rgb(74, 76, 79);
+    text-decoration: none;
+    flex-basis: 240px;
+    flex-grow: 1;
+}
+.name-project{
+    
+    font-size: 18px;
+}
+.project{
+    width:100%;
+    
+    height: 150px;
+    border-radius: 7px;    
+    background-image:url("https://www.kenney.nl/media/pages/games/makeroom/c673fa3325-1680647221/makeroom-kenney.png");
+    background-size: cover;   
+    background-repeat: no-repeat; 
+    background-position: center;
+    text-align: inherit;
+    
+}
+
+footer{
+    margin: 30px 0;
 }
