--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -21,7 +21,7 @@ header{
     position:fixed;
     width: 90%;
     max-width: 510px;
-    
+    z-index: 1000;
     height: 60px;
     margin: 10px;
     background-color: rgba(128, 132, 137,0.5);    
@@ -63,9 +63,11 @@ main{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    transition: 0.5s ease-in-out;
 }
 
-.profile{    
+.profile{   
+    z-index: 1; 
     display: flex;
     max-width:520px;
     gap:20px;  
@@ -190,4 +192,18 @@ footer{
 .dark nav a:hover{
     color:#00a4e6;
     transition: 0.3s ease-in;
+}
+
+[data-content]{
+    position: fixed;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.5s linear;
+    
+}
+.options__active[data-content]{
+    position: relative;
+    visibility: visible;
+    z-index: 10;
+    opacity: 1;
 }
