--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500;700;800&display=swap');
+
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 *{
     margin: 0;
@@ -173,6 +174,7 @@ footer{
 }
 .dark nav a {
     color:rgb(32, 32, 35);
+    font-size: 16px;
 }
 .dark .profile img{
     border:2px solid #00a4e6;
